# xlib-keys-hack

./: .editorconfig  .gitignore  .travis.yml  LICENSE  Makefile  README.md  default.nix  package.yaml  shell.nix  stack.yaml  xlib-keys-hack.cabal
app/: Main.hs  WindowFocusWatcher.hs
app/XlibKeysHack/: Main.hs
docs/scheme/: ergonomic-mode-and-shifted-hjkl.html
nix/: clean-src.nix  default-nixpkgs-pick.nix  sources.json
src/: Actions.hs  IPC.hs  Keys.hs  Main.hs  Options.hs  Process.hs  State.hs  Types.hs  Utils.hs  XInput.hs  main.c
src/Actions/: Types.hs
src/Bindings/: LibInput.hs  MoreXlib.hsc  Poll.hsc  XTest.hs  Xkb.hsc
src/Bindings/Xkb/: Types.hsc
src/Keys/: Map.hs
src/Process/: CrossThread.hs  Keyboard.hs  KeysActions.hs
src/Process/Keyboard/: HandlingKeyEventFlow.hs  RawDeviceHandling.hs  SoftwareDebouncer.hs  Types.hs
src/Utils/: BreakableMonad.hs  Instances.hs  Lens.hs  StateMonad.hs  String.hs  Sugar.hs  X.hs
src/Utils/Maybe/: Preserve.hs
test/: UtilsSpec.hs
test/Utils/: BreakableMonad.hs  Lens.hs  StateMonad.hs  Sugar.hs
